Adding unit test for ConfigurationFile