@@ -1,6 +1,7 @@
 package com.github.marioczpn.kafka.streams.configuration;
 
 import com.github.marioczpn.kafka.streams.constants.Constants;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.streams.StreamsConfig;
 import org.slf4j.Logger;
@@ -29,7 +30,9 @@ public class ConfigurationFile {
      */
     public Properties buildStreamsProperties(Properties envProps) {
         if (envProps == null) {
-            logger.error("Environment properties is empty and this step won't be executed.");
+            final String errorMsg = "Environment properties is empty and this step won't be executed.";
+            logger.error(errorMsg);
+            throw new IllegalArgumentException(errorMsg);
         }
 
         logger.info("Building the streams properties... ");
@@ -80,7 +83,7 @@ public class ConfigurationFile {
      */
     private InputStream readConfigFile(String fileName) throws FileNotFoundException {
         InputStream input = null;
-        if (fileName.isBlank()) {
+        if (StringUtils.isBlank(fileName)) {
             logger.info("Setting INTERNAL resource file.");
             input = getClass().getClassLoader().getResourceAsStream(Constants.INTERNAL_CONFIG_FILE_FROM_RESOURCES);
         } else {
@@ -99,12 +102,22 @@ public class ConfigurationFile {
     public Properties fromEnv() {
         logger.info("Setting environment variables");
 
+        final String appId = System.getenv(Constants.APPLICATION_ID_ENVVAR);
+        final String clientId = System.getenv(Constants.CLIENT_ID_ENVVAR);
+        final String bootStrapServer = System.getenv(Constants.BOOTSTRAP_SERVERS_ENVVAR);
+        final String inputTopic =  System.getenv(Constants.INPUT_TOPIC_NAME_ENVVAR);
+        final String streamsOutputTopicName = System.getenv(Constants.STREAMS_OUTPUT_TOPIC_NAME_ENVVAR);
+        if(StringUtils.isBlank(appId) || StringUtils.isBlank(clientId) || StringUtils.isBlank(bootStrapServer) || StringUtils.isBlank(inputTopic) || StringUtils.isBlank(streamsOutputTopicName)) {
+            logger.error("Environment variables are *EMPTY*. You can set an environment variable.");
+            return null;
+        }
+
         Properties envProps = new Properties();
-        envProps.put(Constants.APPLICATION_ID, System.getenv(Constants.APPLICATION_ID_ENVVAR));
-        envProps.put(Constants.CLIENT_ID, System.getenv(Constants.CLIENT_ID_ENVVAR));
-        envProps.put(Constants.BOOTSTRAP_SERVERS, System.getenv(Constants.BOOTSTRAP_SERVERS_ENVVAR));
-        envProps.put(Constants.INPUT_TOPIC_NAME, System.getenv(Constants.INPUT_TOPIC_NAME_ENVVAR));
-        envProps.put(Constants.STREAMS_OUTPUT_TOPIC_NAME, System.getenv(Constants.STREAMS_OUTPUT_TOPIC_NAME_ENVVAR));
+        envProps.put(Constants.APPLICATION_ID, appId);
+        envProps.put(Constants.CLIENT_ID, clientId);
+        envProps.put(Constants.BOOTSTRAP_SERVERS, bootStrapServer);
+        envProps.put(Constants.INPUT_TOPIC_NAME, inputTopic);
+        envProps.put(Constants.STREAMS_OUTPUT_TOPIC_NAME, streamsOutputTopicName);
 
         logger.info("App is using the environment variable: " + envProps.toString());
         return envProps;
